Fix desktop and tablet spacings

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -260,6 +260,7 @@ hr {
 
 .leader-content-area {
     margin-top: 15px;
+    margin-bottom: 0;
 }
 
 .left-margin {
@@ -704,7 +705,7 @@ article.guide {
     }
 }
 
-@media only screen and (min-device-width: 768px) {
+@media only screen and (max-device-width: 768px) {
     .container-fluid {
         padding: 0;
         marign: 0;
